# gander

./: .gitignore  .yamllint  AGENTS.md  Cargo.toml  DESIGN.md  README.md  build.rs
.github/workflows/: ci.yml
crates/gander-chat/: Cargo.toml  README.md  Trunk.toml  index.html
crates/gander-chat/src/: bridge.rs  lib.rs  markdown.rs
crates/gander-chat/src/acp_core/: events.rs  mod.rs  types.rs
crates/gander-chat/src/acp_core/components/: all_sessions.rs  footer.rs  input_row.rs  message_list.rs  message_view.rs  mod.rs  scroll.rs  sidebar.rs  time_ago.rs  virtual_list.rs
crates/gander-chat/src/goose_ext/: events.rs  mod.rs
crates/gander-chat/src/goose_ext/components/: concertina.rs  mcp_app_iframe.rs  mod.rs
docs/: iframe-sizing.md  webview-spike.md
examples/: acp_hello.rs
i18n/en/: gander.ftl
src/: acp.rs  app.rs  config.rs  i18n.rs  lib.rs  main.rs  state.rs  supervisor.rs  tab.rs  transport.rs  webview.rs
src/acp/: mod.rs
src/ext/: goose.rs  mod.rs
src/transport/: geesed.rs
svg-candidates/: README.md
tests/: README.md  session_load_drain.rs
tests/fixtures/: mock_acp_agent.rs
xtask/: Cargo.toml
xtask/src/: main.rs
