[workspace]
members = [
    ".",
    "crates/gander-chat",
    "xtask",
]
# Only build the native gander binary by default; gander-chat requires the
# wasm32-unknown-unknown target and must be built via `trunk`.
default-members = [".", "xtask"]
resolver = "2"

[package]
name = "gander"
version = "0.0.1"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A post-modern goose: a tabbed COSMIC viewer for geese profiles"
repository = "https://github.com/phlax/gander"
rust-version = "1.85"

[dependencies]
agent-client-protocol = "0.14.0"
anyhow = "1.0"
dirs = "6.0"
geese = { git = "https://github.com/phlax/geese", branch = "init2" }
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
nix = { version = "0.30.1", features = ["signal"] }
open = "5.3"
rust-embed = "8.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.libcosmic]
# Tracking libcosmic master. Pin to a specific rev if a bump breaks us.
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = [
    "about",
    "single-instance",
    "tokio",
    "wgpu",
    "winit",
    "wayland",
    "xdg-portal",
]

[dev-dependencies]
agent-client-protocol = "0.14.0"
tempfile = "3.10"

# wry + WebKitGTK for the per-tab embedded webview (Linux only).
# On Linux this brings in webkit2gtk (WebKitGTK 4.1), gtk, gdkx11, and soup3.
# System packages required: libwebkit2gtk-4.1-dev (which pulls in libgtk-3-dev
# and libsoup-3.0-dev as transitive deps on Debian/Ubuntu).
[target.'cfg(target_os = "linux")'.dependencies]
wry = "0.55"
# gtk is a transitive dep of wry but must be listed explicitly so we can
# call gtk::init / gtk::events_pending / gtk::main_iteration directly.
gtk = { version = "0.18", default-features = false }
# raw-window-handle is a transitive dep via wry/winit; listed explicitly so
# webview.rs can use HasWindowHandle in its function signature.
raw-window-handle = "0.6"

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
