[package]
name = "gander-chat"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Leptos chat client for gander — loads in a per-tab wry webview"
repository = "https://github.com/phlax/gander"

# CDylib is required for wasm-bindgen's WASM glue; rlib lets the test harness
# import the crate as a library.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos CSR (client-side rendering) — no server, no hydration.
# Upgraded to 0.8 to match leptos_icons 0.7 requirement (>=0.8.3).
leptos = { version = "0.8", features = ["csr"] }

# WASM / JS interop
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "console",
] }

# Markdown → HTML (pure Rust, compiles to WASM without changes)
pulldown-cmark = { version = "0.9", default-features = false }

# Route panics to the browser developer-tools console
console_error_panic_hook = "0.1"
leptos_icons = "0.7.1"
icondata = "0.7.0"
icondata_core = "0.1.0"

[dev-dependencies]
serde_json = "1.0"
